# jni-utils-rs

./: Cargo.toml  README.md
java/: build.gradle
