[package]
name = "jni-utils"
version = "0.1.0"
authors = ["Gedgy Gedgy <gedgygedgy@protonmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Extra Utilities for JNI in Rust"
readme = "README.md"

[lib]
path = "rust/lib.rs"

[features]
build-java-support = []

[dependencies]
#jni = "0.19.0"
jni = { path = "../jni-rs" }
static_assertions = "1.1.0"
uuid = "0.8.2"
futures = "0.3.15"
dashmap = "5.2.0"
once_cell = "1.10.0"
log = "0.4.16"

[dev-dependencies]
lazy_static = "1.4.0"
